--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.0",
+    "svgo": "^2.8.0",
     "typescript": "^4.6.2",
     "web-vitals": "^0.2.4"
   },
